force-app/main/default/objects/Employee_Warnings__c/Employee_Warnings__c.object-meta.xml
<CustomObject>
    <label>Employee Warnings</label>
    <nameField>
        <displayFormat>EW-{0000}</displayFormat>
        <label>EW #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Warnings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>