force-app/main/default/objects/Employee_Warnings__c/fields/Conducted_By__c.field-meta.xml
<CustomField>
    <fullName>Conducted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conducted By</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Employee Warnings (Conducted By (3rd Party Supplier))</relationshipLabel>
    <relationshipName>Employee_Warnings1</relationshipName>
    <type>Lookup</type>
</CustomField>