force-app/main/default/objects/Employee_Warnings__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>Date Warning occurred</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>