force-app/main/default/objects/Employee_Warnings__c/fields/Demerit_Points__c.field-meta.xml
<CustomField>
    <fullName>Demerit_Points__c</fullName>
    <label>Demerit Points</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>