force-app/main/default/objects/Employee_Warnings__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>Provide details on the behaviour that lead to at a warning, and of the conversation</inlineHelpText>
    <label>Details</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>