force-app/main/default/objects/Employee_Warnings__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <inlineHelpText>Person who received warning</inlineHelpText>
    <label>Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Employee Warnings</relationshipLabel>
    <relationshipName>Employee_Warnings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>