force-app/main/default/objects/Employee_Warnings__c/fields/Warning_Type__c.field-meta.xml
<CustomField>
    <fullName>Warning_Type__c</fullName>
    <label>Warning Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verbal</fullName>
            </value>
            <value>
                <fullName>Written</fullName>
            </value>
            <value>
                <fullName>First &amp; Final</fullName>
                <label>Written - First &amp; Final</label>
            </value>
            <value>
                <fullName>Written - IVMS Breach</fullName>
            </value>
            <value>
                <fullName>Performance Discussion</fullName>
            </value>
            <value>
                <fullName>Drug/Alcohol Test - Non-negative</fullName>
            </value>
            <value>
                <fullName>First</fullName>
                <isActive>false</isActive>
                <label>Written - First</label>
            </value>
            <value>
                <fullName>Second</fullName>
                <isActive>false</isActive>
                <label>Written - Second</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>