force-app/main/default/objects/Employee_Warnings__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Conducted_By__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Status__c</columns>
    <columns>Warning_Type__c</columns>
    <columns>Name__c</columns>
    <columns>Demerit_Points__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>